--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="app.js"></script>
+    <div id="gameBoard"></div>
+    <p> Would you like to play a game of <span id="player">chess?</span></p>
+    <p id="info-display"></p>
+
+
     <script src="pieces.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
