update player statement

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="gameBoard"></div>
-    <p> Would you like to play a game of <span id="player">chess?</span></p>
+    <p> let go of <span id="player">Black</span></p>
     <p id="info-display"></p>
 
 
