--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div id="gameBoard"></div>
-    <p> let go of <span id="player">Black</span></p>
+    <p> let go of <span id="player">white</span></p>
     <p id="info-display"></p>
-
+    <p id="info-display"></p>
+    
 
     <script src="pieces.js"></script>
     <script src="app.js"></script>
