--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p> let go of <span id="player">white</span></p>
     <p id="info-display"></p>
     <p id="info-display"></p>
+    <p id="info-display"></p>
+    <p id="info-display"></p>
     
 
     <script src="pieces.js"></script>
