--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="gameBoard"></div>
-    <p> let go of <span id="player">white</span></p>
+    <p> let go player <span id="player">white</span></p>
     <p id="info-display"></p>
     
 
