--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js-chess</title>
+    <title>Js-chess board</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="gameBoard"></div>
-    <p> let go player <span id="player">white</span></p>
-    <p id="info-display"></p>
-    
+    <p> let go player <span id="player"></span></p>
+    <p id="info-display"></p>    
 
     <script src="pieces.js"></script>
     <script src="app.js"></script>
